classDiagram
    %% --- Enumerations ---
    class Role {
      <<enumeration>>
      Visitor
      Tourist
      Creator
      Writer
      Admin
    }

    class ArticleStatus {
      <<enumeration>>
      Draft
      Published
      Archived
    }

    %% --- Classes ---
    class User {
      +user_id : PK
      +name : String
      +email : String
      +password_hash : String?
      +role : Role
      +email_verified_at : DateTime?
      +created_at : DateTime
      +updated_at : DateTime
    }

class Article {
  +article_id : PK
  +title : String
  +slug : String (unique)
  +content : Text
  +image : String?
  +views : Integer = 0
  +author_id : FK → User
  +category_id : FK → Category
  +status : String = 'draft'
  +published_at : DateTime?
  +is_moderated : Boolean = false
  +created_at : DateTime
  +updated_at : DateTime
}


    class Comment {
      +comment_id : PK
      +article_id : FK → Article
      +user_id : FK → User?
      +guest_name : String?
      +content : Text
      +is_approved : Boolean = false
      +created_at : DateTime
      +updated_at : DateTime
    }

    class Favorite {
      +user_id : FK → User
      +article_id : FK → Article
      +created_at : DateTime
      %% Composite PK
    }

    class Tag {
      +tag_id : PK
      +name : String (unique)
      +created_at : DateTime
      +updated_at : DateTime
    }

    class ArticleTag {
      +article_id : FK → Article
      +tag_id : FK → Tag
    }

    %% --- Category table ---
    class Category {
      +category_id : PK
      +name : String (unique)
      +slug : String (unique)
    }

    %% --- Relationships ---
    User "1" --> "0..*" Article : writes >
    User "0..1" --> "0..*" Comment : writes >
    User "1" --> "0..*" Favorite : likes >

    Article "1" --> "0..*" Comment : receives >
    Article "1" --> "0..*" Favorite : is liked by >
    Article "1" --> "0..*" ArticleTag : has >
    Article "*" --> "1" Category : belongs to >

    Tag "1" --> "0..*" ArticleTag : tags >

    %% --- Notes ---
    note for User "• Visitor / Tourist: Read-only\n• Creator: Share projects, comment\n• Writer: Publish articles and media\n• Admin: Moderate, manage everything"